# study_vuetify

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: dockerfile.yml  nodejs.yml  python.yml
backend/: .flake8  .gitignore  .pep8  .pylintrc  README.md  mypy.ini  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
backend/hello_world/: app.py
docker/local/node/: Dockerfile
docker/local/python/: Dockerfile
frontend/: README.md  package-lock.json  package.json
frontend/src/api/: AppApi.ts
frontend/src/components/: HelloWorld.vue
