[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autopep8>=2.3.1",
    "aws-lambda-powertools>=3.3.0",
    "black>=24.10.0",
    "boto3>=1.35.81",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
    "pylint>=3.3.2",
    "pytest>=8.3.4",
    "requests>=2.32.3",
]

[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
# 88文字制限はキツすぎるので 120文字に拡張
line-length = 120
extend-exclude = '''
(
    /\.aws\-sam/.*
    | /tests/.*
    | /\.venv/.*
)
'''
